<resources>
    <string name="app_name">Fris</string>
    <string name="title_activity_main">Utforsk</string>
    <string name="title_utforsk">Utforsk</string>
    <string name="title_friskort">Fris Kort</string>
    <string name="title_profil">Profil</string>
    <string name="welcome_text">VELKOMMEN!</string>
    <string name="welcome_text2">
        Fris er det nye stedet hvor du kan kjøpe bekymringsfri iskrem, milkshake, og kaffe!
    </string>
    <string name="welcome_text3">
        Fri for alle 14 matallergener, i tillegg er alt på menyen vegansk!
    </string>

    <string name="icecream_description">
          Rolled ice-cream laget med kokosmelk og kakao. Velg en valgfri tilsetning og maks 3 forskjellige toppinger.
          Produktet og tilsetningene/toppingeneer selvfølgelig helt vegansk og 100% allergifritt.
    </string>
    <string name="leggKjop">legg i handlekurv</string>
    <string name="din_bestilling">Din Bestilling</string>
    <string name="hentes_p_akerbrygge">Hentes På Akerbrygge</string>
    <string name="hentes_om_10_min">Hentes om 10 min</string>
    <string name="produkter">Produkter</string>
    <string name="rolled_ice_cream_69">Rolled ice-cream 69 -</string>
    <string name="sum_69">SUM                   69-</string>
    <string name="betal_og_send_bestilling">betal og send bestilling</string>
    <string name="description">Description</string>
    <string name="fortsett_uten_bruker">Fortsett uten bruker</string>
    <string name="logg_inn">Logg inn</string>
    <string name="friskort_description">
        For hver 7. iskrem du kjøper hos oss, så får du en valfri rolled ice-cream gratis.
        PS: Du må være medlem for å benytte deg av friskortet og tilbudet!
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook">Facebook</string>
    <string name="favoritter">Favoritter</string>
    <string name="mine_kvitteringer">Mine Kvitteringer</string>
    <string name="mine_kj_p">Mine kjøp</string>
    <string name="konto">Konto</string>
    <string name="bekreftKjopTekst1">TAKK FOR DIN BESTILLING,</string>
    <string name="bekreftKjopTekst2">VELKOMMEN IGJEN!</string>
    <string name="bekreftKjop_Tekst3">Hentes på Akerbrygge om 10 minutter.</string>
    <string name="tilbake_til_start_Btn">tilbake til start</string>
    <string name="bank_Btn">Bank</string>
    <string name="vipps_btn">Vipps</string>
    <string name="din_handlekurv_btn">Din Handlekurv</string>


</resources>