<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_utforsk">

    <fragment
        android:id="@+id/navigation_utforsk"
        android:name="com.example.fris.ui.utforsk.HomeFragment"
        android:label="@string/title_utforsk"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fris.ui.friskort.FriskortFragment"
        android:label="@string/title_friskort"
        tools:layout="@layout/fragment_friskort" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fris.ui.notifications.NotificationsFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_Profil" />
</navigation>